# Koala

./: .gitignore  CMakeLists.txt  KoalaLang.sln  KoalalLang.slnx  LICENSE  README.md  SkullLang.slnx
Koala/: CMakeLists.txt  Koala.csproj  Program.cs
Koala/koala_app/: CMakeLists.txt
Koala/koala_lang/: CMakeLists.txt
Koala/koala_lang/include/: Kernel.h
Koala/koala_lang/include/KoalaByte/: ByteData.h  Bytecode.h  OpCodes.h
Koala/koala_lang/include/KoalaLang/: ASTNodes.h  Kernel.h  KoalaLangVersionInfo.h  Lexer.h  Parser.h  Token.h  Translator.h  test.h
Koala/koala_lang/src/: Lexer.cpp  Parser.cpp  test.cpp
Koala/koala_lang/src/byte/: ByteData.cpp
Koala/koala_lang/src/lang/: Lexer.cpp  Parser.cpp  Translator.cpp
Koala/koala_test_sources/: sandbox.kls
KoalaDemoSources/: sandbox.kls
KoalaDemoSources/snake/: snake.kls
KoalaLang/: Class1.cs  KoalaLang.csproj
KoalaLang/CodeGenerator/: CodeGen.cs  NodesEmitting.cs
KoalaLang/Lexer/: Lexer.cs  Token.cs  TokenType.cs
KoalaLang/ParserAndAST/: ExpressionParser.cs  FunctionParser.cs  Parser.cs  ParserContext.cs  StatementParser.cs
KoalaLang/Tools/: StringTools.cs
KoalaLang/Translators/: FunctionInfo.cs  ILTranslator.cs  ModuleInfo.cs  TranslationContext.cs  TypeTranslator.cs  VariablesController.cs
KoalaLangHeaders/: KOALA_LANG_DEFAULT_DEFINITIONS.h
KoalaTestScripts/: complex.kls  integral_sinx_dx.kls  test0.kls
Skull/: Program.cs  Skull.csproj
SkullLang/: SkullLang.csproj  Test.cs
SkullLang/CodeGenerator/: CodeGen.cs  NodesEmitting.cs
SkullLang/Tools/: StringTools.cs
SkullLangHeaders/: SKULL_LANG_DEFAULT_DEFINITIONS.h
SkullTestScripts/: integral_sinx_dx.skull  test0.skull
frontend/: KoalaFrontend.slnx
koala_asm/: CMakeLists.txt
koala_asm/src/: config.h  err_code.h  main.cpp
koala_asm/src/parser/: byte_data.h  instruction.h  io.cpp  io.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h  translator.cpp  translator.h
koala_asm/tests/: test.asm.kls  test.kbc
koala_vm_lib/: CMakeLists.txt
koala_vm_lib/include/koala_vm/: byte_data.h  config.h  op_codes.h  type_codes.h  vm.h  vm_config.h
koala_vm_lib/src/: op_codes.cpp  vm.cpp  vm_op.cpp
lang/: CMakeLists.txt
test_scripts/: file1.kls
(+104 files in other folders)
